# perfaware_programming_hw

./: .gitmodules  LICENSE  zen3_cache.csv
crates/asm/: Cargo.toml  README.md  build.rs
crates/asm/src/: alignment.rs  cache.rs  lib.rs  listing_139_code_alignment.asm  listing_141_load_store_ports.asm  listing_142_simd.asm  listing_143_cache_size.asm  listing_144_non_power_of_two.asm  listing_146_nuke_cache.asm  listing_147_non_temporal_store.asm  listing_148_prefetching.asm  load_store_ports.rs  non_bin_cache.rs  non_temporal_store.rs  nuke_cache.rs  prefetching.rs  simd.rs  stubs.rs
haversine/: Cargo.toml  build.rs  listing_113.csv
haversine/.zed/: settings.json
haversine/src/: core_affinity.rs  lib.rs  pointer.rs  write.rs
haversine/src/json_parser/: ast.rs  lexer.rs
haversine/src/labels/: mod.rs
haversine/src/rep_tester/: mod.rs
mac_os_timer/: build.nu
part2-profiling/haversine/: Cargo.toml  README.md  build.rs
part2-profiling/json-parser/: Cargo.toml
part2-profiling/json_parser/: Cargo.toml
rust/: .gitignore  Cargo.toml  justfile  scripts.nu
rust/findings/: aligned_vs_unaligned_l2.csv  aligned_vs_unaligned_l3.csv  aligned_vs_unaligned_main.csv  aligned_vs_unaligned_synt.csv
rust/src/: lib.rs  write.rs
rust/src/json_parser/snapshots/: haversine_generator__json_parser__lexer__check_basic_lexing_exponential.snap  haversine_generator__json_parser__parses.snap
rust/src/json_utils/: mod.rs
rust/src/rep_tester/: mod.rs
rust/src/simple_profiler/: core.rs
rust/src/time/: mod.rs
rust/src/time/cpp/: apple_arm_events.hpp
(+42 files in other folders)
