[package]
name = "haversine_generator"
version = "0.1.0"
edition = "2024"

[features]
default = ["timing_low_level"]
measure_timer_frequency = []
profiler = []
timing_mac_os_cycles = []
timing_low_level = []
timing_os = []

[profile.release-d]
inherits = "release"
debug = true

[[bin]]
name = "generator"

[dependencies]
libc = "0.2"
rand = "0.9.1"
rand_xoshiro = "0.7.0"
cfg-if = "1.0"
insta = "1.43.1"
asm = { version = "0.1.0", path = "../crates/asm" }

[build-dependencies]
cc = "1"
